<resources>
    <string name="app_name">Блокнотик</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="titleEdit">Заголовок</string>
    <string name="descEdit">Содержание</string>
    <string name="notes_menu">Заметки</string>
    <string name="archive_menu">Архив</string>
    <string name="settings_menu">Настройки</string>
    <string name="add_tag">Редактировать</string>
    <string name="nav_tag">Метки</string>
</resources>
